committing to "lecture"

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Guided project for **Node API 1** Module.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node index.js",
+    "ketchup": "git fetch && git reset --hard origin/lecture"
   },
   "repository": {
     "type": "git",
