--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Guided project for **Node API 1** Module.",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js",
+    "start": "node index.js",
     "ketchup": "git fetch && git reset --hard origin/lecture"
   },
   "repository": {
