--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Guided project for **Node API 1** Module.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "ketchup": "git fetch && git reset --hard origin/lecture"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
